# rust-and-htmx

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: app.rs  environment.rs  lib.rs  main.rs
src/app/: root.rs
