[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
diesel = { version = "2.1.4", features = ["postgres"] }
envy = "0.4.2"
sailfish = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }